projet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabitmq-deployment
  labels:
    app: rabitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabitmq-pod
  template:
    metadata:
      labels:
        app: rabitmq-pod
    spec:
      containers:
      - name: rabitmq-cont
        image: sbansimba/rabbitmq:3-management
        ports:
        - name: port5672
          containerPort: 5672
        - name: port15672
          containerPort: 15672
        readinessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 45
          periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 45
          periodSeconds: 20    
        resources:
          #requests:
            #memory: 200Mi
            #cpu: 250m
          limits:
            memory: 200Mi
            cpu: 0.4  
      nodeSelector:
          hardware: highmem2
  
---
apiVersion: v1
kind: Service
metadata:
  name: service-rabittmq
spec:
  selector:
    app: rabitmq-pod
  ports:
    - name: port5672
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: port15672
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-pod
  template:
    metadata:
      labels:
        app: database-pod
    spec:
      containers:
      - name: database-cont
        image: sbansimba/mssql-linux
        ports:
        - containerPort: 1433
        readinessProbe:
          tcpSocket:
            port: 1433
          initialDelaySeconds: 45
          periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 1433
          initialDelaySeconds: 45
          periodSeconds: 20   
        resources:
          #requests:
            #memory: 200Mi
            #cpu: 250m
          limits:
            memory: 1000Mi #1500Mi
            cpu: 0.3  
      nodeSelector:
          hardware: highmem2
    
---
apiVersion: v1
kind: Service
metadata:
  name: service-database
spec:
  selector:
    app: database-pod
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-data-deployment
  labels:
    app: user-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-data-pod
  template:
    metadata:
      labels:
        app: user-data-pod
    spec:
      containers:
      - name: user-data-cont
        image: sbansimba/redis
        ports:
        - containerPort: 6379
        readinessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 45
          periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 45
          periodSeconds: 20 
        resources:
          #requests:
            #memory: 200Mi
            #cpu: 250m
          limits:
            memory: 30Mi #50Mi
            cpu: 0.2  
      nodeSelector:
          hardware: highmem
    

---
apiVersion: v1
kind: Service
metadata:
  name: service-user-data
spec:
  selector:
    app: user-data-pod
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-identity-deployment
  labels:
    app: api-identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-identity-pod
  template:
    metadata:
      labels:
        app: api-identity-pod
    spec:
      containers:
      - name: api-identity-cont
        image: sbansimba/identity.api
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 45
          periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 45
          periodSeconds: 20     
        resources:
          #requests:
            #memory: 200Mi
            #cpu: 250m
          limits:
            memory: 60Mi #100Mi
            cpu: 0.3 
      nodeSelector:
          hardware: highmem   


---
apiVersion: v1
kind: Service
metadata:
  name: service-api-identity
spec:
  selector:
    app: api-identity-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-applicants-deployment
  labels:
    app: api-applicants
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-applicants-pod
  template:
    metadata:
      labels:
        app: api-applicants-pod
    spec:
      containers:
      - name: api-applicants-cont
        image: sbansimba/applicants.api
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 45
          periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 45
          periodSeconds: 20     
        resources:
          #requests:
            #memory: 200Mi
            #cpu: 250m
          limits:
            memory: 60Mi #100Mi
            cpu: 0.2 #0.3 
      nodeSelector:
          hardware: highmem2   


---
apiVersion: v1
kind: Service
metadata:
  name: service-api-applicants
spec:
  selector:
    app: api-applicants-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-jobs-deployment
  labels:
    app: api-jobs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-jobs-pod
  template:
    metadata:
      labels:
        app: api-jobs-pod
    spec:
      containers:
      - name: api-jobs-cont
        image: sbansimba/jobs.api
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 45
          periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 45
          periodSeconds: 20
        resources:
          #requests:
            #memory: 200Mi
            #cpu: 250m
          limits:
            memory: 60Mi #100Mi
            cpu: 0.2 #0.3  
      nodeSelector:
          hardware: highmem2     
  

---
apiVersion: v1
kind: Service
metadata:
  name: service-api-jobs
spec:
  selector:
    app: api-jobs-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-pod
  template:
    metadata:
      labels:
        app: web-pod
    spec:
      containers:
      - name: web-cont
        image: sbansimba/web
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 45
          periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 45
          periodSeconds: 20
        resources:
          #requests:
            #memory: 200Mi
            #cpu: 250m
          limits:
            memory: 500Mi #100Mi
            #cpu: 0.4 #0.3
      nodeSelector:
          hardware: highmem2
      #affinity:
       #   podAffinity:
        #    requiredDuringSchedulingIgnoredDuringExecution:
         #   - labelSelector:
          #      matchExpressions:
           #     - key: hardware
            #      operator: In
             #     values: highmem2
              #topologyKey: failure-domain.beta.kubernetes.io/zone
  

---
apiVersion: v1
kind: Service
metadata:
  name: service-web
spec:
  selector:
    app: web-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP #LoadBalancer
