ingress.yaml
#ClusterIssuer
apiVersion: cert-manager.io/v1alpha2
kind: ClusterIssuer
metadata:
  name: letsencrypt
spec:
  acme:
    server: https://acme-v02.api.letsencrypt.org/directory
    email: mehdi.bahadou@ynov.com
    privateKeySecretRef:
      name: letsencrypt
    solvers:
    - http01:
        ingress:
          class: nginx


# Ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ssl-tls-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - frontend.20.74.17.26.nip.io # update IP address here 
      secretName: app-web-cert
  rules:
  - host: frontend.20.74.17.26.nip.io # update IP address here 
    http:
      paths:
      - backend:
          serviceName: service-web
          servicePort: 80
        path: /
